--- a/config/cloudinary.yml
+++ b/config/cloudinary.yml
@@ -1,19 +1,22 @@
----
-development:
+default: &default
   cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
   api_key: <%= ENV['CLOUDINARY_API_KEY'] %>
   api_secret: <%= ENV['CLOUDINARY_SECRET_KEY'] %>
   enhance_image_tag: true
   static_image_support: false
-production:
-  cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
-  api_key: <%= ENV['CLOUDINARY_API_KEY'] %>
-  api_secret: <%= ENV['CLOUDINARY_SECRET_KEY'] %>
+
+test:
+  <<: *default
+
+development:
+  <<: *default
+
+staging:
+  <<: *default
   enhance_image_tag: true
   static_image_support: true
-test:
-  cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
-  api_key: <%= ENV['CLOUDINARY_API_KEY'] %>
-  api_secret: <%= ENV['CLOUDINARY_SECRET_KEY'] %>
+
+production:
+  <<: *default
   enhance_image_tag: true
-  static_image_support: false
+  static_image_support: true
